Adds background elements.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 </head>
 <body>
     <div id="aquarium">
-        <!-- Add fish and other elements here -->
-        <!-- Example: 
-        <div class="fish" id="fish1"><img src="assets/Angel.GIF" alt="Angel Fish"></div>
-        <div class="fish" id="fish2"><img src="assets/Angler.GIF" alt="Angler Fish"></div>
-        <div class="fish" id="fish3"><img src="assets/Blue.GIF" alt="Blue Fish"></div>
-        <div class="fish" id="fish4"><img src="assets/Catfish.GIF" alt="Catfish"></div>
-    -->
+
+        <!-- Castle element -->
+        <div class="castle" id="castle"><img src="assets/castle.gif" alt="Castle"></div>
+        <!-- Kelp elements -->
+        <div class="kelp" id="kelp1"><img src="assets/kelp.gif" alt="Kelp 1"></div>
+        <div class="kelp" id="kelp2"><img src="assets/kelp.gif" alt="Kelp 2"></div>
+        <div class="kelp" id="kelp3"><img src="assets/kelp.gif" alt="Kelp 3"></div>
+        <div class="kelp" id="kelp4"><img src="assets/kelp.gif" alt="Kelp 4"></div>
+        <!-- Add more kelp elements as needed -->
     </div>
     <script src="js/script.js"></script>
 </body>
