Updates images to remove backgrounds

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <div id="aquarium">
 
         <!-- Castle element -->
-        <div class="castle" id="castle"><img src="https://raw.githubusercontent.com/tlq68/e-quarium/main/assets/Castle.GIF" alt="Castle"></div>
+        <div class="castle" id="castle"><img src="assets/Castle-No-Background.gif" alt="Castle"></div>
         <!-- Kelp elements -->
-        <div class="kelp" id="kelp2"><img src="https://raw.githubusercontent.com/tlq68/e-quarium/main/assets/Kelp.GIF" alt="Kelp 2"></div>
-        <div class="kelp" id="kelp3"><img src="https://raw.githubusercontent.com/tlq68/e-quarium/main/assets/Kelp.GIF" alt="Kelp 3"></div>
-        <div class="kelp" id="kelp4"><img src="https://raw.githubusercontent.com/tlq68/e-quarium/main/assets/Kelp.GIF" alt="Kelp 4"></div>
-        <div class="kelp" id="kelp1"><img src="https://raw.githubusercontent.com/tlq68/e-quarium/main/assets/Kelp.GIF" alt="Kelp 1"></div>
+        <div class="kelp" id="kelp2"><img src="assets/Kelp-No-Background.gif" alt="Kelp 2"></div>
+        <div class="kelp" id="kelp3"><img src="assets/Kelp-No-Background.gif" alt="Kelp 3"></div>
+        <div class="kelp" id="kelp4"><img src="assets/Kelp-No-Background.gif" alt="Kelp 4"></div>
+        <div class="kelp" id="kelp1"><img src="assets/Kelp-No-Background.gif" alt="Kelp 1"></div>
         <!-- Add more kelp elements as needed -->
     </div>
     <script src="js/script.js"></script>
