Changes movement for fish

--- a/index.html
+++ b/index.html
@@ -8,16 +8,22 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div id="aquarium">
+    <div id="aquarium-container">
+        <div id="aquarium" class="aquarium-flex-container">
 
-        <!-- Castle element -->
-        <div class="castle" id="castle"><img src="assets/Castle-No-Background.gif" alt="Castle"></div>
-        <!-- Kelp elements -->
-        <div class="kelp" id="kelp2"><img src="assets/Kelp-No-Background.gif" alt="Kelp 2"></div>
-        <div class="kelp" id="kelp3"><img src="assets/Kelp-No-Background.gif" alt="Kelp 3"></div>
-        <div class="kelp" id="kelp4"><img src="assets/Kelp-No-Background.gif" alt="Kelp 4"></div>
-        <div class="kelp" id="kelp1"><img src="assets/Kelp-No-Background.gif" alt="Kelp 1"></div>
-        <!-- Add more kelp elements as needed -->
+            <!-- Castle element -->
+            <div class="castle" id="castle"><img src="assets/Castle-No-Background.gif" alt="Castle"></div>
+            <!-- Kelp elements -->
+            <div class="kelp" id="kelp2"><img src="assets/Kelp-No-Background.gif" alt="Kelp 2"></div>
+            <div class="kelp" id="kelp3"><img src="assets/Kelp-No-Background.gif" alt="Kelp 3"></div>
+            <div class="kelp" id="kelp4"><img src="assets/Kelp-No-Background.gif" alt="Kelp 4"></div>
+            <div class="kelp" id="kelp1"><img src="assets/Kelp-No-Background.gif" alt="Kelp 1"></div>
+            <!-- Add more kelp elements as needed -->
+
+            <!-- Fish container -->
+            <div id="fish-container"></div>
+
+        </div>
     </div>
     <script src="js/script.js"></script>
 </body>
