--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
         <div id="aquarium" class="aquarium-flex-container">
 
             <!-- Castle element -->
-            <div class="castle" id="castle"><img src="assets/Castle-No-Background.gif" alt="Castle"></div>
+            <div class="castle" id="castle">
+                <div class="kelp" id="kelp1"><img src="assets/Kelp.gif" alt="Kelp 1"></div>
+                <div class="kelp" id="kelp5"><img src="assets/Kelp.gif" alt="Kelp 5"></div>
+                <img src="assets/Castle-No-Background.gif" alt="Castle">
+                <div class="kelp" id="kelp2"><img src="assets/Kelp.gif" alt="Kelp 2"></div>
+            </div>
             <!-- Kelp elements -->
-            <div class="kelp" id="kelp2"><img src="assets/Kelp.gif" alt="Kelp 2"></div>
             <div class="kelp" id="kelp3"><img src="assets/Kelp.gif" alt="Kelp 3"></div>
             <div class="kelp" id="kelp4"><img src="assets/Kelp.gif" alt="Kelp 4"></div>
-            <div class="kelp" id="kelp1"><img src="assets/Kelp.gif" alt="Kelp 1"></div>
             <!-- Add more kelp elements as needed -->
 
             <!-- Fish container -->
