--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="castle" id="castle">
                 <div class="kelp" id="kelp1"><img src="assets/Kelp.gif" alt="Kelp 1"></div>
                 <div class="kelp" id="kelp2"><img src="assets/Kelp.gif" alt="Kelp 2"></div>
-                <img src="assets/Castle-No-Background.gif" alt="Castle">
+                <img src="assets/Castle CLEAR.gif" alt="Castle">
                 <div class="kelp" id="kelp3"><img src="assets/Kelp.gif" alt="Kelp 3"></div>
                 <div class="kelp" id="kelp4"><img src="assets/Kelp.gif" alt="Kelp 4"></div>
                 <div class="kelp" id="kelp5"><img src="assets/Kelp.gif" alt="Kelp 5"></div>
