--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <audio id="backgroundAudio" autoplay loop>
+        <source src="assets\audio\Fish 1.m4a" type="audio/mp4">
+        Your browser does not support the audio tag.
+    </audio>
     <div id="aquarium-container">
         <div id="aquarium" class="aquarium-flex-container">
 
