Changes audio to play on click

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <audio id="backgroundAudio" autoplay loop controls>
+    <audio id="backgroundAudio" autoplay loop>
         <source src="assets\audio\Fish1.m4a" type="audio/mp4">
         Your browser does not support the audio tag.
     </audio>
