--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
     <title>Virtual Aquarium</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/dropdown.css">
 </head>
 <body>
     <div id="top-bar">
+        <div id="fish-dropdown" class="dropdown">
+            <button id="fish-dropdown-btn">Select Fish</button>
+            <div class="dropdown-content" id="fish-dropdown-content">
+                <label><input type="checkbox" class="fish-checkbox" value="Salmon" checked> Salmon</label>
+                <label><input type="checkbox" class="fish-checkbox" value="Tuna" checked> Tuna</label>
+                <label><input type="checkbox" class="fish-checkbox" value="Cod" checked> Cod</label>
+                <!-- Add more checkboxes for other fish types as needed -->
+            </div>
+        </div>
+        
         <button id="toggleAudioButton">Toggle Audio</button>
         
         <audio id="backgroundAudio" loop>
@@ -39,5 +50,6 @@
     </div>
 
     <script src="js/script.js"></script>
+    <script src="js/dropdown.js"></script>
 </body>
 </html>
