Creates separate audio.js file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <!-- Add more checkboxes for other fish types as needed -->
             </div>
         </div>
-        
+
         <button id="toggleAudioButton">Toggle Audio</button>
         
         <audio id="backgroundAudio" loop>
@@ -50,6 +50,7 @@
     </div>
 
     <script src="js/script.js"></script>
+    <script src="js/audio.js"></script>
     <script src="js/dropdown.js"></script>
 </body>
 </html>
