Adds proper fish names to the fish selector

--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
         <div id="fish-dropdown" class="dropdown">
             <button id="fish-dropdown-btn">Select Fish</button>
             <div class="dropdown-content" id="fish-dropdown-content">
-                <label><input type="checkbox" class="fish-checkbox" value="Salmon" checked> Salmon</label>
-                <label><input type="checkbox" class="fish-checkbox" value="Tuna" checked> Tuna</label>
-                <label><input type="checkbox" class="fish-checkbox" value="Cod" checked> Cod</label>
-                <!-- Add more checkboxes for other fish types as needed -->
+                <div id="checkboxes-container"></div>
             </div>
         </div>
 
