Exports fish names and modulizes scripts

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         </div>
     </div>
 
-    <script src="js/script.js"></script>
-    <script src="js/audio.js"></script>
-    <script src="js/dropdown.js"></script>
+    <script type="module" src="js/script.js"></script>
+    <script type="module" src="js/audio.js"></script>
+    <script type="module" src="js/dropdown.js"></script>
 </body>
 </html>
