--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
 
     <script type="module" src="js/script.js"></script>
     <script type="module" src="js/audio.js"></script>
-    <!-- <script type="module" src="js/dropdown.js"></script> -->
+    <script type="module" src="js/dropdown.js"></script>
 </body>
 </html>
