Realigns fish selector

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 </head>
 <body>
     <div id="top-bar">
-        <div id="checkboxes-container"></div>
+        <div class="selectors-container">
+            <div id="checkboxes-container"></div>
 
-        <button id="toggleAudioButton">Toggle Audio</button>
-        
+            <button id="toggleAudioButton">Toggle Audio</button>
+        </div>
         <audio id="backgroundAudio" loop>
             <source src="assets\audio\Fish3.m4a" type="audio/mp4">
             Your browser does not support the audio tag.
