Implements hamburger menu

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 <body>
     <div id="top-bar">
         <div class="selectors-container">
+            <!-- Hamburger icon for small screens -->
+            <input type="checkbox" id="hamburger-icon">
+            <label id="hamburger-icon-label" for="hamburger-icon">
+                <img id="hamburger-icon" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cline x1='3' y1='12' x2='21' y2='12'%3E%3C/line%3E%3Cline x1='3' y1='6' x2='21' y2='6'%3E%3C/line%3E%3Cline x1='3' y1='18' x2='21' y2='18'%3E%3C/line%3E%3C/svg%3E" alt="Hamburger Icon">
+            </label>
+
             <div id="checkboxes-container"></div>
 
             <button id="toggleAudioButton">Toggle Audio</button>
