--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 
             <div id="checkboxes-container"></div>
 
+            <div class="slider-container">
+                <label for="fishLimitSlider">Max Fish Limit: </label>
+                <input type="range" id="fishLimitSlider" min="1" max="50" value="20">
+                <span id="fishLimitValue">20</span>
+            </div>
+
             <button id="toggleAudioButton">Toggle Audio</button>
         </div>
         <audio id="backgroundAudio" loop>
