Changes slider information

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <div id="checkboxes-container"></div>
 
             <div class="slider-container">
-                <label for="fishLimitSlider">Max Fish Limit: </label>
+                <label for="fishLimitSlider">Fish Density: </label>
                 <input type="range" id="fishLimitSlider" min="1" max="50" value="20">
-                <span id="fishLimitValue">20</span>
+                <span id="fishLimitValue"></span>
             </div>
 
             <button id="toggleAudioButton">Toggle Audio</button>
