--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
         </audio>
     </div>
 
+    <svg width="0" height="0" style="position:absolute;">
+        <defs>
+        <!-- Define your custom SVG filter -->
+        <filter id="customFilter">
+            <!-- Example: Apply a grayscale effect to non-transparent parts -->
+            <feColorMatrix type="matrix" values="0.3333 0.3333 0.3333 0 0
+                                                0.3333 0.3333 0.3333 0 0
+                                                0.3333 0.3333 0.3333 0 0
+                                                0      0      0      1 0"/>
+        </filter>
+        </defs>
+    </svg>
+  
     <div id="aquarium-container">
         <div id="aquarium" class="aquarium-flex-container">
 
