--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
              <!-- Castle element -->
              <div class="castle" id="castle">
+                <div class="chest" id="chest"><img src="assets/Chest.gif" alt="Treasure chest"></div>
                 <div class="kelp" id="kelp1"><img src="assets/Kelp.gif" alt="Kelp 1"></div>
                 <div class="kelp" id="kelp2"><img src="assets/Kelp.gif" alt="Kelp 2"></div>
                 <img src="assets/Castle CLEAR.gif" alt="Castle">
@@ -48,6 +49,7 @@
                 <div class="kelp" id="kelp4"><img src="assets/Kelp.gif" alt="Kelp 4"></div>
                 <div class="kelp" id="kelp5"><img src="assets/Kelp.gif" alt="Kelp 5"></div>
             </div>
+
 
             <!-- Fish container -->
             <div id="fish-container"></div>
