--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <span id="fishLimitValue"></span>
             </div>
 
-            <button id="toggleAudioButton">Toggle Audio</button>
+            <button id="toggle-audio-button">Toggle Audio</button>
         </div>
-        <audio id="backgroundAudio" loop>
+        <audio id="backgroundAudio">
             <source src="assets\audio\Fish3.m4a" type="audio/mp4">
             Your browser does not support the audio tag.
         </audio>
@@ -49,7 +49,6 @@
                 <div class="kelp" id="kelp4"><img src="assets/Kelp.gif" alt="Kelp 4"></div>
                 <div class="kelp" id="kelp5"><img src="assets/Kelp.gif" alt="Kelp 5"></div>
             </div>
-
 
             <!-- Fish container -->
             <div id="fish-container"></div>
