--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
             <!-- Hamburger icon for small screens -->
             <input type="checkbox" id="hamburger-icon" class="hamburger-icon">
             <label id="hamburger-icon-label" class="hamburger-icon" for="hamburger-icon">
-                <img class="hamburger-icon-image" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cline x1='3' y1='12' x2='21' y2='12'%3E%3C/line%3E%3Cline x1='3' y1='6' x2='21' y2='6'%3E%3C/line%3E%3Cline x1='3' y1='18' x2='21' y2='18'%3E%3C/line%3E%3C/svg%3E" alt="Hamburger Icon">
+                <svg class="hamburger-icon-image" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                    <line x1="3" y1="12" x2="21" y2="12" stroke="#69dcdc" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></line>
+                    <line x1="3" y1="6" x2="21" y2="6" stroke="#15dcdc" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></line>
+                    <line x1="3" y1="18" x2="21" y2="18" stroke="#6969dc" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></line>
+                </svg>
             </label>
 
 
