--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             
         </div>
         <audio id="backgroundAudio" loop>
-            <source src="assets/audio/Fish1.m4a" type="audio/mp4">
+            <source type="audio/mp4">
             Your browser does not support the audio tag.
         </audio>
     </div>
