--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <label for="audio1">Song 1</label>
                 <input type="radio" id="audio2" name="audio" value="assets/audio/Fish2.m4a">
                 <label for="audio2">Song 2</label>
-                <input type="radio" id="audio3" name="audio" value="assets/audio/Fish3.m4a" checked>
+                <input type="radio" id="audio3" name="audio" value="https://github.com/tlq68/e-quarium/raw/main/assets/audio/Fish3.m4a" checked>
                 <label for="audio3">Song 3</label>
             </div>
     
