--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
 
              <!-- Castle element -->
              <div class="castle" id="castle">
-                <div class="kelp" id="kelp1"><img src="assets/Kelp.gif" alt="Kelp 1"></div>
-                <div class="kelp" id="kelp2"><img src="assets/Kelp.gif" alt="Kelp 2"></div>
-                <img src="assets/Castle CLEAR.gif" alt="Castle">
-                <div class="kelp" id="kelp3"><img src="assets/Kelp.gif" alt="Kelp 3"></div>
-                <div class="kelp" id="kelp4"><img src="assets/Kelp.gif" alt="Kelp 4"></div>
-                <div class="kelp" id="kelp5"><img src="assets/Kelp.gif" alt="Kelp 5"></div>
+                <div class="kelp" id="kelp1"><img src="https://github.com/tlq68/e-quarium/blob/main/assets/Kelp.gif?raw=true" alt="Kelp 1"></div>
+                <div class="kelp" id="kelp2"><img src="https://github.com/tlq68/e-quarium/blob/main/assets/Kelp.gif?raw=true" alt="Kelp 2"></div>
+                <img src="https://raw.githubusercontent.com/tlq68/e-quarium/main/assets/Castle%20CLEAR.gif" alt="Castle">
+                <div class="kelp" id="kelp3"><img src="https://github.com/tlq68/e-quarium/blob/main/assets/Kelp.gif?raw=true" alt="Kelp 3"></div>
+                <div class="kelp" id="kelp4"><img src="https://github.com/tlq68/e-quarium/blob/main/assets/Kelp.gif?raw=true" alt="Kelp 4"></div>
+                <div class="kelp" id="kelp5"><img src="https://github.com/tlq68/e-quarium/blob/main/assets/Kelp.gif?raw=true" alt="Kelp 5"></div>
             </div>
 
             <div id="chest-container">
                 <div class="chest" id="chest">
-                    <img src="assets/Chest.gif" alt="Treasure chest">
+                    <img src="https://raw.githubusercontent.com/tlq68/e-quarium/main/assets/Chest.gif" alt="Treasure chest">
                 </div>
             </div>
 
